--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hexlet/code",
     "autoload": {
         "psr-4": {
-            "Hexlet\\Code\\": "src/"
+            "BrainGames\\": "src/"
         }
     },
     "authors": [
@@ -13,5 +13,7 @@
     "bin": [
         "bin/brain-games"
     ],
-    "require": {}
+    "require": {
+        "wp-cli/php-cli-tools": "^0.12.0"
+    }
 }
