--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "autoload": {
         "files": [
             "src/Cli.php",
-            "src/evenOdd.php"
+            "src/Games/evenOdd.php",
+	        "src/Games/calc.php",
+            "src/Engine.php"
         ]
     },
     "authors": [
@@ -13,7 +15,8 @@
     ],
     "bin": [
         "bin/brain-games",
-        "bin/brain-even"
+        "bin/brain-even",
+	    "bin/brain-calc"
     ],
     "require": {
         "wp-cli/php-cli-tools": "^0.12.0"
