--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 	        "src/Games/calc.php",
             "src/Games/gcd.php",
             "src/Games/progression.php",
+            "src/Games/prime.php",
             "src/Engine.php"
         ]
     },
@@ -20,7 +21,8 @@
         "bin/brain-even",
 	    "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
     ],
     "require": {
         "wp-cli/php-cli-tools": "^0.12.0"
