--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,11 @@
     "autoload": {
         "files": [
             "src/Cli.php",
-            "src/Games/evenOdd.php",
-	        "src/Games/calc.php",
-            "src/Games/gcd.php",
-            "src/Games/progression.php",
-            "src/Games/prime.php",
+            "src/Games/EvenOdd.php",
+	        "src/Games/Calc.php",
+            "src/Games/Gcd.php",
+            "src/Games/Progression.php",
+            "src/Games/Prime.php",
             "src/Engine.php"
         ]
     },
